= Changelog

* Frontend
  ** Add new page to view space users.
* API
  ** HTTP 403 responses now contain the missing permission.
  ** Add space users to `/space/view/` response.
  ** Only show email address when allowed in `/profile` response.
  ** Add `/space/kick` route.

== `0.6.0.1`

* Fixed a bug where newly created spaces didn't get the `role_edit` permission for the default admin role.

== `0.6.0.0`

* Frontend
  ** Add new page to view and add roles.
  ** Add new page to edit specific roles.
* API
  ** Add `/role/create` route.
  ** Add `/role/delete` route.
  ** Add `/role/edit` route.
  ** The `/space/view` response now redundantly includes the `space` id for each role.
* Database
  ** Add new permission `role_edit`.
     Given to everyone who also has the `space_edit` permission.

== `0.5.0.0`

* API
  ** Add `/desk/delete` route.
* Database
  ** Give `space_edit` permission to everyone with `desk_edit` permission.
* Frontend
  ** It's now possible to cancel reservations.

== `0.4.0.0`

* Database
  ** Make sure that all space owners are admins if possible.

== `0.3.1.0`

* API
  ** Add `/space/edit` route.
* Frontend
  ** Add a new page to edit space settings.

== `0.3.0.0`

* API
  ** Remove `password` field from the request of the `/space/create` route.
  ** Add new HTTP error codes to `/desk/create` route.
* Database
  ** Move column `password_hash` from table `space` to `space_role`.
* Frontend
  ** Add a new page to view existing reservations.
  ** Add a primitive indicator to visualize reserved time periods.

== `0.2.0.0`

* Update all dependencies.
* API
  ** Add owner information to the response of the `/space/view` route.

== `0.1.0.0`

* API
  ** Add `/space/leave` route.
  ** Add optional `password` to request body route of `/space/create`.
  ** Add `owner` field to spaces when serialized to/from JSON affecting a few routes.
    *** `/space/list`
    *** `/reservation/list`
* Frontend